--- a/doctors.html
+++ b/doctors.html
@@ -1,84 +1,182 @@
 
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initialscale=1.0">-->
+<!--    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">-->
+<!--    <link rel="stylesheet" href="Liana_style.css">-->
+<!--    <meta name="viewport" content="width=device-width, initialscale=1.0">-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">-->
+<!--    <title>Densauluq</title>-->
+<!--</head>-->
+
+<!--<body>-->
+<!--<header class="text-center text-light py-3" style="background-color: #19585a;">-->
+<!--    <h1>Our Specialists</h1>-->
+<!--    <p>We are pleased to introduce you to our team of medical specialists!</p>-->
+<!--</header>-->
+
+
+
+<!--<nav class="bg-dark text-light py-2">-->
+<!--    <ul class="nav justify-content-center">-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link text-light" href="registration.html">Log in/Sign up</a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link text-light" href="appointment.html">Make an Appointment</a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link text-light" href="analysis.html">Tests and Your Health</a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link text-light" href="personal_account.html">Personal Account</a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link text-light" href="diseases.html">About Diseases</a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link text-light" href="doctors.html">Doctors' Database</a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link text-light" href="recommend.html">General Recommendations</a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link text-light" href="funding.html">Financing</a>-->
+<!--        </li>-->
+<!--    </ul>-->
+<!--</nav>-->
+
+
+<!--<section>-->
+<!--    <table class="table table-borderless">-->
+<!--        <thead>-->
+<!--        <tr>-->
+<!--            <th  scope="col">Photo</th>-->
+<!--            <th  scope="col">Name</th>-->
+<!--            <th  scope="col">Specialization</th>-->
+<!--            <th  scope="col">Contact</th>-->
+<!--            <th  scope="col">Available Days</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <tr >-->
+<!--            <td >-->
+<!--                <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Liana">-->
+<!--                <figcaption>Doctor's image</figcaption>-->
+<!--                <a type="button" class="btn btn-secondary btn-sm" href="appointment.html">Make an appointment</a>-->
+<!--            </td>-->
+<!--            <td>Dr. Liana Smatulla</td>-->
+<!--            <td>Cardiologist</td>-->
+<!--            <td>liana.smat@densauluq.com</td>-->
+<!--            <td>Monday, Wednesday, Friday</td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>-->
+<!--                <img src="img/photo_2024-09-06%2013.16.17.jpeg" alt="Dr. Kuanysh">-->
+<!--                <figcaption>Doctor's image</figcaption>-->
+<!--                <a  type="button" class="btn btn-secondary btn-sm" href="appointment.html">Make an appointment</a>-->
+<!--            </td>-->
+<!--            <td>Dr. Kuanysh Aitzhanov</td>-->
+<!--            <td>Dermatologist</td>-->
+<!--            <td>kuan.ait@deunsauluq.com</td>-->
+<!--            <td>Tuesday, Thursday</td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>-->
+<!--                <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Gaziza" >-->
+<!--                <figcaption>Doctor's image</figcaption>-->
+<!--                <a type="button" class="btn btn-secondary btn-sm" href="appointment.html"> Make an appointment </a>-->
+<!--            </td>-->
+<!--            <td>Dr. Gaziza Tanirbergen</td>-->
+<!--            <td>Neurologist</td>-->
+<!--            <td>gaziza.tan@densauluq.com</td>-->
+<!--            <td>Monday, Thursday, Saturday</td>-->
+<!--        </tr>-->
+<!--        </tbody>-->
+<!--    </table>-->
+<!--</section>-->
+
+<!--<footer class="bg-dark text-light text-center py-3 mt-auto">-->
+<!--    <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>-->
+<!--</footer>-->
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initialscale=1.0">
-<!--    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">-->
-<!--    <link rel="stylesheet" href="Liana_style.css">-->
-    <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+    <link rel="stylesheet" href="Liana_style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Densauluq</title>
 </head>
 
 <body>
-<header>
+<header class="text-center text-light py-3" style="background-color: #19585a;">
     <h1>Our Specialists</h1>
     <p>We are pleased to introduce you to our team of medical specialists!</p>
 </header>
 
-<nav>
-    <ul>
-        <li><a href="home_page.html">Return to Home Page</a></li>
-        <li><a href="appointment.html">Make an Appointment</a></li>
-        <li><a href="analysis.html">Tests and Your Health</a></li>
-        <li><a href="personal_account.html">Personal Account</a></li>
-        <li><a href="diseases.html">About Diseases</a></li>
-        <li><a href="recommend.html">General Recommendations</a></li>
-        <li><a href="funding.html">Financing</a></li>
+<nav class="bg-dark text-light py-2">
+    <ul class="nav justify-content-center">
+        <li class="nav-item"><a class="nav-link text-light" href="registration.html">Log in/Sign up</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="appointment.html">Make an Appointment</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="analysis.html">Tests and Your Health</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="personal_account.html">Personal Account</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="diseases.html">About Diseases</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="doctors.html">Doctors' Database</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="recommend.html">General Recommendations</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="funding.html">Financing</a></li>
     </ul>
 </nav>
 
-<section>
-    <table>
-        <thead>
-        <tr>
-            <th>Photo</th>
-            <th>Name</th>
-            <th>Specialization</th>
-            <th>Contact</th>
-            <th>Available Days</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>
-                <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Liana">
-                <figcaption>Doctor's image</figcaption>
-                <a href="appointment.html">Make an appointment</a>
-            </td>
-            <td>Dr. Liana Smatulla</td>
-            <td>Cardiologist</td>
-            <td>liana.smat@densauluq.com</td>
-            <td>Monday, Wednesday, Friday</td>
-        </tr>
-        <tr>
-            <td>
-                <img src="img/photo_2024-09-06%2013.16.17.jpeg" alt="Dr. Kuanysh">
-                <figcaption>Doctor's image</figcaption>
-                <a href="appointment.html">Make an appointment</a>
-            </td>
-            <td>Dr. Kuanysh Aitzhanov</td>
-            <td>Dermatologist</td>
-            <td>kuan.ait@deunsauluq.com</td>
-            <td>Tuesday, Thursday</td>
-        </tr>
-        <tr>
-            <td>
-                <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Gaziza" =>
-                <figcaption>Doctor's image</figcaption>
-                <a href="appointment.html"> Make an appointment </a>
-            </td>
-            <td>Dr. Gaziza Tanirbergen</td>
-            <td>Neurologist</td>
-            <td>gaziza.tan@densauluq.com</td>
-            <td>Monday, Thursday, Saturday</td>
-        </tr>
-        </tbody>
-    </table>
+<section class="container my-3">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="card mb-3">
+                <img src="img/photo_2024-09-06%2013.16.14.jpeg" class="card-img-top" alt="Dr. Liana">
+                <div class="card-body">
+                    <h5 class="card-title"><strong>Dr. Liana Smatulla</strong></h5>
+                    <p class="card-text"><strong>Specialization:</strong> Cardiologist</p>
+                    <p class="card-text"><strong>Contact:</strong> liana.smat@densauluq.com</p>
+                    <p class="card-text"><strong>Available Days:</strong> Monday, Wednesday, Friday</p>
+                    <a href="appointment.html" class="btn btn-secondary">Make an appointment</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card mb-3">
+                <img src="img/photo_2024-09-06%2013.16.17.jpeg" class="card-img-top" alt="Dr. Kuanysh">
+                <div class="card-body">
+                    <h5 class="card-title"><strong>Dr. Kuanysh Aitzhanov</strong></h5>
+                    <p class="card-text"> <strong>Specialization:</strong> Dermatologist</p>
+                    <p class="card-text"><strong>Contact:</strong> kuan.ait@deunsauluq.com</p>
+                    <p class="card-text"><strong>Available Days:</strong> Tuesday, Thursday</p>
+                    <a href="appointment.html" class="btn btn-secondary">Make an appointment</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card mb-3">
+                <img src="img/photo_2024-09-06%2013.16.14.jpeg" class="card-img-top" alt="Dr. Gaziza">
+                <div class="card-body">
+                    <h5 class="card-title"><strong>Dr. Gaziza Tanirbergen</strong></h5>
+                    <p class="card-text "><strong>Specialization:</strong> Neurologist</p>
+                    <p class="card-text"> <strong>Contact:</strong> gaziza.tan@densauluq.com</p>
+                    <p class="card-text"><strong>Available Days:</strong> Monday, Thursday, Saturday</p>
+                    <a href="appointment.html" class="btn btn-secondary">Make an appointment</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
-<footer>
+<footer class="bg-dark text-light text-center py-3 mt-auto">
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 </body>
