--- a/funding.html
+++ b/funding.html
@@ -3,43 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
-<!--    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">-->
+    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
-<!--    <link rel="stylesheet" href="Liana_style.css">-->
+    <link rel="stylesheet" href="Liana_style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Densauluq</title>
 </head>
 
-<header>
+<header class="text-center text-light py-3" style="background-color: #19585a;">
     <h1>Densauluq - Discounts and Appointments</h1>
     <p>Please select whether you are eligible for special discounts or need to schedule a regular appointment.</p>
 </header>
-<nav>
-    <ul>
-        <li><a href="registration.html">Log in/Sign up</a></li>
-        <li><a href="appointment.html">Make an Appointment</a></li>
-        <li><a href="analysis.html">Tests and Your Health</a></li>
-        <li><a href="personal_account.html">Personal Account</a></li>
-        <li><a href="diseases.html">About Diseases</a></li>
-        <li><a href="doctors.html">Doctors' Database</a></li>
-        <li><a href="recommend.html">General Recommendations</a></li>
+
+
+<nav class="bg-dark text-light py-2">
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link text-light" href="registration.html">Log in/Sign up</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="appointment.html">Make an Appointment</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="analysis.html">Tests and Your Health</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="personal_account.html">Personal Account</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="diseases.html">About Diseases</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="doctors.html">Doctors' Database</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="recommend.html">General Recommendations</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" href="funding.html">Financing</a>
+        </li>
     </ul>
 </nav>
+
 
 <section>
     <h2>Select Your Appointment Type</h2>
 
     <form action="process-discount.html" method="get">
         <label for="discount-options">Are you eligible for discounts?</label>
-        <select id="discount-options" name="discount-type">
-            <option value="none">No, I need a standard appointment</option>
+        <select class="custom-select" id="discount-options" name="discount-type">
+            <option  value="none">No, I need a standard appointment</option>
             <option value="disability">Yes, I am a person with disabilities</option>
             <option value="pensioner">Yes, I am a senior citizen</option>
             <option value="large-family">Yes, I have a large family (multiple children)</option>
         </select>
         <br><br>
 
-        <a href="appointment.html">Next</a>
+        <a type="button" class="btn btn-outline-success btn-sm " href="appointment.html">Next</a>
     </form>
 </section>
 
@@ -77,12 +97,12 @@
             <input type="text" id="billing-address" name="billing-address" placeholder="Tokyo, Some Street 123"required>
             <br><br>
 
-            <input type="submit" value="Submit Payment">
+            <input type="button" class="btn btn-outline-danger btn-sm"  value="Submit Payment">
         </fieldset>
     </form>
 </section>
-<footer>
-    <p> 2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov. </p>
+<footer class="bg-dark text-light text-center py-3 mt-auto">
+    <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 
 </body>
