--- a/registration.html
+++ b/registration.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="GazizaDesign.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Log in/Sign in - Densauluq</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Log in/Sign up - Densaulyq</title>
 </head>
 <body>
 <header class="text-center text-light py-3" style="background-color: #19585a;">
     <h1>Account on Densaulyq?</h1>
 </header>
+
 <nav class="bg-dark text-light py-2">
     <ul class="nav justify-content-center">
         <li class="nav-item"><a class="nav-link text-light" href="home_page.html">Main</a></li>
@@ -24,22 +25,23 @@
         <li class="nav-item"><a class="nav-link text-light" href="funding.html">Financing</a></li>
     </ul>
 </nav>
-<br>
-<br>
+
+<br><br>
+
 <div class="container">
     <div class="row justify-content-center my-5">
         <div class="col-lg-5 col-md-6 mb-4">
             <div class="card shadow-sm border-0 rounded-4">
                 <div class="card-body p-4">
                     <h2 class="card-title text-center mb-4">Already a member? Log in!</h2>
-                    <form action="personal_account.html" method="get">
+                    <form id="loginForm" action="personal_account.html" method="get">
                         <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" id="email" class="form-control form-control-lg" placeholder="johnwickofficial@gmail.com" required>
+                            <label for="email-login" class="form-label">Email</label>
+                            <input type="email" id="email-login" class="form-control form-control-lg" placeholder="johnwickofficial@gmail.com" required>
                         </div>
                         <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" id="password" class="form-control form-control-lg" placeholder="********" required>
+                            <label for="password-login" class="form-label">Password</label>
+                            <input type="password" id="password-login" class="form-control form-control-lg" placeholder="********" required>
                         </div>
                         <button type="submit" class="bg-dark btn btn-primary w-100 btn-lg">Log in</button>
                     </form>
@@ -48,14 +50,14 @@
         </div>
 
         <div class="col-lg-2 d-flex justify-content-center align-items-center mb-4">
-            <img src="img/redblue.png" class="image-animation" alt="Rotating logo">
+            <img src="img/redblue.png" class="image-animation" alt="Rotating Densaulyq logo">
         </div>
 
         <div class="col-lg-5 col-md-6 mb-4">
             <div class="card shadow-sm border-0 rounded-4">
                 <div class="card-body p-4">
                     <h2 class="card-title text-center mb-4">New here? Sign up!</h2>
-                    <form action="personal_account.html" method="get">
+                    <form id="registerForm" action="personal_account.html" method="get">
                         <div class="mb-3">
                             <label for="first-name" class="form-label">First Name</label>
                             <input type="text" id="first-name" class="form-control form-control-lg" placeholder="John" required>
@@ -65,8 +67,8 @@
                             <input type="text" id="last-name" class="form-control form-control-lg" placeholder="Wick" required>
                         </div>
                         <div class="mb-3">
-                            <label for="email-signup" class="form-label">E-mail</label>
-                            <input type="email" id="email-signup" class="form-control form-control-lg" placeholder="johnwickofficial@gmail.com" required>
+                            <label for="email-register" class="form-label">E-mail</label>
+                            <input type="email" id="email-register" class="form-control form-control-lg" placeholder="johnwickofficial@gmail.com" required>
                         </div>
                         <div class="mb-3">
                             <label for="dob" class="form-label">Date of Birth</label>
@@ -88,11 +90,12 @@
     </div>
 </div>
 
-<br>
-<br>
-<br>
+<br><br><br>
+
 <footer class="bg-dark text-light text-center py-3 mt-auto">
-    <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
+    <p>2024 Densaulyq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
+
+<script src="validation.js"></script>
 </body>
 </html>
