--- a/analysis.html
+++ b/analysis.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <script src="darkMode.js"></script>
     <link rel="stylesheet" href="GazizaDesign.css">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
