--- a/funding.html
+++ b/funding.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <script src="darkMode.js"></script>
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Liana_style.css">
