--- a/funding.html
+++ b/funding.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="Liana_style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="burger.js"></script>
+    <script src="functions.js"></script>
     <link rel="stylesheet" href="burger.css">
     <script src="scrollAnimation.js"></script>
     <title>Densauluq</title>
+
 </head>
 
 <header class="text-center text-light py-3" style="background-color: #19585a;">
@@ -117,6 +119,7 @@
 <footer class="bg-dark text-light text-center py-3 mt-auto">
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
+
 
 </body>
 </html>
