--- a/personal_account.html
+++ b/personal_account.html
@@ -75,6 +75,36 @@
   </section>
 </div>
 
+<section class="mt-4 ms-3 me-3 mb-4">
+  <div class="card shadow">
+    <div class="card-body">
+      <h2>Your Appointments</h2>
+      <p>No upcoming appointments.</p>
+      <p><a href="appointment.html" class="btn btn-primary">Schedule a new appointment</a></p>
+    </div>
+  </div>
+</section>
+
+<section class="mt-4 ms-3 me-3 mb-4">
+  <div class="card shadow">
+    <div class="card-body">
+      <h2>Your Test Results</h2>
+      <p>No test results available.</p>
+      <p><a href="analysis.html" class="btn btn-primary">View more details</a></p>
+    </div>
+  </div>
+</section>
+
+<section class="mt-4 ms-3 me-3 mb-4">
+  <div class="card shadow">
+    <div class="card-body">
+      <h2>Contact Your Doctor</h2>
+      <p><strong>Doctor's Name:</strong> Dr. Aibolit</p>
+      <p><strong>Email:</strong> doctor@gmail.com</p>
+      <p><strong>Phone:</strong> +7 (777) 456 4567</p>
+    </div>
+  </div>
+</section>
 
 <script src="user.js"></script>
 <script src="adminPanel.js"></script>
