--- a/personal_account.html
+++ b/personal_account.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initialscale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="darkMode.js"></script>
   <script src="burger.js"></script>
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="burger.css">
   <script src="scrollAnimation.js"></script>
   <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+  <script src="user.js"></script>
   <title>Personal Account - Densauluq</title>
 </head>
 <body>
@@ -22,33 +23,16 @@
 
 <nav class="bg-dark text-light">
   <ul class="nav justify-content-center py-2">
-    <li class="nav-item">
-      <a class="nav-link text-light" href="home_page.html">Return to home page</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-light" href="registration.html">Log out</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-light" href="appointment.html">Make an appointment</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-light" href="analysis.html">View test results</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-light" href="diseases.html">About diseases</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-light" href="doctors.html">Doctors' database</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-light" href="recommend.html">General recommendations</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-light" href="funding.html">Financing</a>
-    </li>
+    <li class="nav-item"><a class="nav-link text-light" href="home_page.html">Return to home page</a></li>
+    <li class="nav-item"><a class="nav-link text-light" href="registration.html">Log out</a></li>
+    <li class="nav-item"><a class="nav-link text-light" href="appointment.html">Make an appointment</a></li>
+    <li class="nav-item"><a class="nav-link text-light" href="analysis.html">View test results</a></li>
+    <li class="nav-item"><a class="nav-link text-light" href="diseases.html">About diseases</a></li>
+    <li class="nav-item"><a class="nav-link text-light" href="doctors.html">Doctors' database</a></li>
+    <li class="nav-item"><a class="nav-link text-light" href="recommend.html">General recommendations</a></li>
+    <li class="nav-item"><a class="nav-link text-light" href="funding.html">Financing</a></li>
   </ul>
 </nav>
-
 
 <div class="container my-4">
   <section>
@@ -106,12 +90,29 @@
   </div>
 </section>
 
+<button onclick="logout()">Logout</button>
+
+<div id="adminModal" class="modal">
+  <div class="modal-content">
+    <span class="close" id="closeModal">&times;</span>
+    <h2>Admin Panel</h2>
+    <form id="adminForm">
+      <label for="userEmailAdmin">User Email:</label>
+      <input type="email" id="userEmailAdmin" required>
+
+      <button type="submit">Manage User</button>
+    </form>
+  </div>
+</div>
+
 <script src="user.js"></script>
 <script src="adminPanel.js"></script>
 
 <footer class="bg-dark text-light text-center py-3 mt-auto">
   <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
-</body>
 
+
+
+</body>
 </html>
